fix: Fixed tabs being clipped when there's too much element separation, b=(closes #8412), c=compact-mode

--- a/src/zen/compact-mode/zen-compact-mode.css
+++ b/src/zen/compact-mode/zen-compact-mode.css
@@ -116,7 +116,8 @@
         padding: var(--zen-toolbox-padding) !important;
         :root:not([zen-sidebar-expanded='true']) & {
           padding: var(--zen-toolbox-padding) 0 !important;
-          max-width: var(--zen-sidebar-width);
+          max-width: calc(var(--zen-sidebar-width) - var(--zen-toolbox-padding) * 2);
+          width: var(--zen-sidebar-width);
         }
         position: relative;
         min-width: var(--zen-toolbox-min-width);
